# mdbook-iced

./: Cargo.toml  LICENSE  README.md
.github/workflows/: build.yml  lint.yml  test.yml
book/: book.toml
book/src/: SUMMARY.md  guide.md
src/: compiler.rs  lib.rs
src/compiler/: Cargo.toml.template  embed.html  embedding.html  library.html
src/compiler/iced/: Cargo.toml
src/compiler/iced/src/: lib.rs
