[package]
name = "mdbook-iced"
version = "0.14.0-dev"
edition = "2021"
license = "MIT"
description = "An mdBook preprocessor to turn iced code blocks into interactive examples"
repository = "https://github.com/iced-rs/mdbook-iced"
authors = ["Héctor Ramón Jiménez <hector@hecrj.dev>"]
readme = "README.md"
keywords = ["book", "mdbook", "gui", "iced", "interactive"]
exclude = ["*.gif"]

[dependencies]
mdbook = "0.4"
semver = "1.0"
toml = "0.5"
serde_json = "1.0"
pulldown-cmark = "0.10"
pulldown-cmark-to-cmark = "13.0"
itertools = "0.12"
sha2 = "0.10"
clap = "4.5"
anyhow = "1.0"

[workspace]
members = ["./src/compiler/iced"]

[workspace.dependencies.iced_]
package = "iced"
version = "0.14.0-dev"
git = "https://github.com/iced-rs/iced.git" 

[workspace.dependencies.iced_test]
version = "0.14.0-dev"
git = "https://github.com/iced-rs/iced.git"

[[bin]]
name = "mdbook-iced"
doc = false
